--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -1,31 +1,31 @@
-fof-pages:
+ithauaz-pages:
   admin:
     edit_page:
-      content_label: => fof-pages.ref.content
-      content_placeholder: => fof-pages.ref.content
+      content_label: => ithauaz-pages.ref.content
+      content_placeholder: => ithauaz-pages.ref.content
       delete_page_button: Delete page
       delete_page_confirmation: "Are you sure you want to delete this page?"
       hidden_label: Save as draft
       restricted_label: Restrict access (configure who can access in the Permissions tab)
       html_label: Enable HTML
       set_as_home_page_confirmation: "Are you sure you want to set this page as your home page?"
-      slug_label: => fof-pages.ref.slug
-      slug_placeholder: => fof-pages.ref.slug
+      slug_label: => ithauaz-pages.ref.slug
+      slug_placeholder: => ithauaz-pages.ref.slug
       submit_button: => core.ref.save_changes
-      title: => fof-pages.ref.create_page
-      title_label: => fof-pages.ref.title
-      title_placeholder: => fof-pages.ref.title
-      url_label: => fof-pages.ref.url
-      url_placeholder: => fof-pages.ref.url
+      title: => ithauaz-pages.ref.create_page
+      title_label: => ithauaz-pages.ref.title
+      title_placeholder: => ithauaz-pages.ref.title
+      url_label: => ithauaz-pages.ref.url
+      url_placeholder: => ithauaz-pages.ref.url
     nav:
-      pages_button: => fof-pages.ref.pages
+      pages_button: => ithauaz-pages.ref.pages
       pages_text: Create custom static pages.
     pages:
       about_text: Create and manage static pages.
-      create_button: => fof-pages.ref.create_page
+      create_button: => ithauaz-pages.ref.create_page
     pages_list:
       empty_text: It looks like there are no pages here.
-      title: => fof-pages.ref.title
+      title: => ithauaz-pages.ref.title
     permissions:
       restricted: View restricted pages
     badges:
